# TailSentry

./: .env.example  .gitignore  .pre-commit-config.yaml  ALT_DASHBOARD_BUG_FIXES.md  ALT_DASHBOARD_IMPLEMENTATION_SUMMARY.md  AUTH_KEY_IMPLEMENTATION_SUMMARY.md  CLI_ONLY_MODE_COMPLETE.md  CLI_ONLY_MODE_IMPLEMENTATION_COMPLETE.md  CLI_ONLY_MODE_PLAN.md  CONSOLIDATION_CLEANUP_NOTES.md  CSRF_COOKIE_TROUBLESHOOTING.md  DASHBOARD_COMPLETION_SUMMARY.md  DATABASE_BACKUP.md  DATABASE_RECOVERY.md  DEBIAN_DEPLOYMENT.md  DEBIAN_SUMMARY.md  DEBIAN_TESTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPER_WORKFLOW.md  DEVELOPMENT.md  DISASTER_RECOVERY.md  DISCORD_BOT_DOCUMENTATION.md  DISCORD_BOT_EXPANSION_COMPLETE.md  DISCORD_BOT_IMPLEMENTATION_COMPLETE.md  DISCORD_BOT_SECURITY.md  DISCORD_BOT_SETUP.md  DISCORD_BOT_TROUBLESHOOTING.md  Dockerfile  ENHANCED_DASHBOARD.md  ENVIRONMENT_VARIABLE_UPDATE.md  EXECUTIVE_SUMMARY.md  FAQ.md  FEATURES_LOG.md  HOSTNAME_SETTING_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  INSTALLATION.md  INSTALLATION_GUIDE.md  (+117 more)
.copilot/: context.md
alembic/: env.py  script.py.mako
config/: .env.example  alert_rules.example.yml  debian_config.env  prometheus.example.yml  tailscale_settings.json  tailsentry_config.json
docs/: POSTGRESQL_MIGRATION.md
middleware/: csrf.py  metrics.py  monitoring.py  rate_limit.py  security.py  smtp_security.py
routes/: __init__.py  admin.py  api.py  auth.py  authenticate.py  config.py  dashboard.py  down.py  exit_node.py  faq.py  keys.py  logs.py  monitoring.py  notifications.py  settings.py  sso.py  system_settings.py  tailscale.py  tailscale_settings.py  tailsentry_settings.py  user.py  version.py
scripts/: backup.sh  backup_db.ps1  backup_db.sh  check_template.py  crontab.example  dependency_security_check.ps1  dependency_security_check.sh  health-check.sh  performance_tester.py  run-all-tests.ps1  run-all-tests.sh  setup-test-env.ps1  setup-test-env.sh  test-deployment-simple.ps1  test-deployment-windows.ps1  test-deployment.sh  test-integration-stress.sh  test-security.sh  update_packages.ps1  update_packages.sh  validate-integration.sh  validate_db.ps1  validate_db.sh
services/: audit_logger.py  backup_service.py  config_security.py  device_notifications.deprecated.py  device_notifications.py  discord_access_control.py  discord_bot.py  input_validation.py  log_sanitizer.py  mfa_service.py  network_security.py  secure_smtp.py  sso_auth.py  sso_service.py  tailscale_service.py  windows_network.py
static/: alpine-focus.min.js  alpine.min.js  alt-dashboard.js  alt_dashboard.js  alt_dashboard.test.js  dark-mode-addon.css  dashboard-controller.js  dashboard.js  debug-login.html  tailwind.min.css  test.html
templates/: 403.html  404.html  500.html  alt_dashboard.html  appearance.html  audit_logs.html  backups.html  base.html  change_password.html  dashboard.html  error.html  exitnode.html  faq.html  faq.html.old  index.html  keys.html  login.html  logs.html  mfa_setup.html  notifications.html  onboarding.html  profile.html  (+13 more)
(+6 files in other folders)
